# vibe-spam

./: .dockerignore  .example.env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly-redis.toml  fly.toml  rust-toolchain.toml  sqlx-data.json  todo.org
.github/workflows/: deploy.yml  pull-request.yml
client/: .gitignore  .tokeignore  README.md  elm.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/config/: Local.elm  Prod.elm  local-prod.env  local.env
client/public/: index.html  main.js
client/review/: elm.json
client/review/src/: ReviewConfig.elm
client/review/suppressed/: NoUnused.Variables.json
client/scripts/: generateTailwind.js
client/src/: Api.elm  Main.elm  Ports.elm  ScalarCodecs.elm  Shared.elm  View.elm
client/src/Api/: LobbyData.elm  RoomData.elm  Subscriptions.elm
client/src/Components/: Header.elm  HomeHero.elm  LobbyTable.elm  NumberInput.elm  PageHeader.elm  Table.elm
client/src/Data/: Emoji.elm
client/src/Pages/: Home_.elm
client/src/ScalarCodecs/: PosixTime.elm  Uuid.elm
client/src/Shared/: Flags.elm  RouteHelpers.elm  Routes.elm  (+1 more)
config/: dictionary.txt
fly-redis/: fly.toml
migrations/: 20220401010648_initial_setup.sql  20220401010840_create_rooms.sql  20220509223605_create_chat_messages.sql
scripts/: gen_schema.sh  prepare.sh  psql.sh
src/: app.rs  gen_schema.rs  lib.rs  main.rs  pubsub.rs  routes.rs  schema.rs  session.rs  settings.rs  telemetry.rs
src/routes/: cors.rs  graphql.rs  health.rs  static_files.rs
src/schema/: chat.rs  chat_repo.rs  lobby.rs  lobby_repo.rs
templates/: index.html
tests/api/: flags.rs  graphql.rs  health_check.rs  helpers.rs  main.rs
(+3 files in other folders)
